# bloch

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  commitlint.config.cjs  commitlint.config.js  paper.bib  paper.md  release-please-config.json  tag.sh
.github/: release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  defect.md  feature.md  new-feature.md
.github/workflows/: check-changelog.yaml  cpp-ci.yaml  create-release-branch.yaml  manual-packager.yaml  notion-daily-stars.yml  notion-kpi-tracker.yaml  package-release.yaml  pr-checks.yaml  release-branching.yaml  release-candidate.yaml  release-candidate.yml  release-checks.yaml  release-please.yaml  release-publish.yaml  release.yaml  static-analysis.yaml  tag-release-from-master.yaml  update-changelog-on-tag.yaml
docs/: README.md  annotations-and-tracking.md  architecture.md  bloch_class_system.md  branching-diagram-v1.drawio  builtins-and-gates.md  casting.md  classes-and-objects.md  compiler.md  control-flow.md  development-workflow.md  diagnostics.md  examples.md  functions-and-modules.md  getting-started.md  grammar.md  index.md  language-spec.md  language-tour.md  null.md  overview.md  pyproject.toml  quantum-programming.md  release-process.md  runtime.md  tooling-and-cli.md  troubleshooting.md  types-and-data.md
docs/language/: annotations.md  language-guide.md  quantum.md  semantics.md  syntax.md
docs/reference/: README.md  architecture.md  ast.md  builtins.md  cli.md  coding-standards.md  lexer.md  module-loader.md  parser.md  qasm-mapping.md  qasm-simulator.md  runtime-evaluator.md  semantics.md  testing.md
docs/source/: conf.py  index.md  release-notes.md
docs/source/_static/: custom.css
docs/source/architecture/: index.md
docs/source/contributors/: dev-setup.md  index.md  release.md  style.md  workflow.md
docs/source/examples/: index.md
docs/source/reference/: index.md
docs/source/users/: faq.md  index.md  installation.md  quickstart.md  tooling.md  tutorials.md
docs/tooling/: cli.md
docs/user/: README.md  annotations-and-tracking.md  casting.md  classes-and-objects.md  control-flow.md  examples.md  functions-and-modules.md  getting-started.md  language-tour.md  quantum-programming.md  tooling-and-cli.md  troubleshooting.md  types-and-data.md
docs/v1.0.x/: bloch-api.md  classes.md  contribute.md  features.md  getting-started.md  index.md  language-tour.md  reference.md  tooling.md
docs/v1.0.x/reference/: annotations.md  bit.md  builtins.md  char.md  classes.md  float.md  functions.md  index.md  int.md  keywords.md  qubit.md  string.md
docs/v1.0.x/reference/primitives/: array.md  bit.md  char.md  float.md  int.md  qubit.md  string.md
docs/v1.1.x/: bloch-api.md  classes.md  contribute.md  features.md  getting-started.md  index.md  language-tour.md  reference.md  tooling.md
docs/v1.1.x/reference/: annotations.md  arrays.md  builtins.md  char.md  classes.md  float.md  functions.md  index.md  int.md  keywords.md  string.md
docs/v1.1.x/reference/primitives/: array.md  bit.md  char.md  float.md  int.md  qubit.md  string.md
engineering/: README.md
engineering/adrs/: ADR-001-class-system.md  ADR-002-null-handling.md  ADR-003-generics.md  ADR-004-shots-annotation.md  ADR-005-new-v1.1.0-primitives.md  ADR-006-stdlib-boxing.md  ADR-007-stdlib-collections.md  ADR-008-custom-http-lib.md  ADR-009-import-system.md  ADR-010-lattice-build-system.md  index.md
engineering/designs/: DES-001-class-system.md  DES-002-shots.md  index.md  (+6 more)
examples/: 01_hadamard.bloch  02_bell_state.bloch  03_deutsch_jozsa.bloch  04_grover_search.bloch  05_bell_pair_class.bloch  05_teleport_class.bloch  06_maxcut_c4_class.bloch  06_virtual_preparation.bloch  07_null_demo.bloch  07_tracked_pool.bloch  08_generics.bloch  08_qaoa.bloch  README.md  bell_pair.bloch  bitwise.bloch  coin_flip.bloch  entangled_tracked.bloch  errors.bloch  ghz.bloch  hybrid_control.bloch  math_stdlib_demo.bloch  postfix.bloch  redeclare_error.bloch  reset.bloch  superposition.bloch  superposition2.bloch  ternary.bloch  tracked.bloch
paper/: paper.bib  paper.md
project_example/: README.md
scripts/: build_and_test.sh  format.sh  install.ps1  install.sh  tag.sh
src/: CMakeLists.txt  main.cpp
src/bloch/: feature_flags.hpp
src/bloch/ast/: ast.hpp
src/bloch/cli/: cli.cpp  cli.hpp
src/bloch/codegen/: cpp_generator.cpp  cpp_generator.hpp
src/bloch/compiler/ast/: ast.hpp
src/bloch/compiler/import/: module_loader.cpp  module_loader.hpp
src/bloch/compiler/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/bloch/compiler/parser/: parser.cpp  parser.hpp
src/bloch/compiler/semantics/: built_ins.cpp  built_ins.hpp  semantic_analyser.cpp  semantic_analyser.hpp  type_system.cpp  type_system.hpp
src/bloch/core/ast/: ast.hpp
src/bloch/core/import/: module_loader.cpp  module_loader.hpp
src/bloch/core/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/bloch/core/parser/: parser.cpp  parser.hpp
src/bloch/core/semantics/: built_ins.cpp  built_ins.hpp  semantic_analyser.cpp  semantic_analyser.hpp  type_system.cpp  type_system.hpp
src/bloch/error/: bloch_error.hpp  bloch_runtime_error.hpp
src/bloch/http/: http_client.cpp  http_client.hpp
src/bloch/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/bloch/parser/: parser.cpp  parser.hpp
src/bloch/runtime/: qasm_simulator.cpp  qasm_simulator.hpp  runtime_evaluator.cpp  runtime_evaluator.hpp
src/bloch/semantics/: built_ins.cpp  built_ins.hpp  semantic_analyser.cpp  semantic_analyser.hpp  type_system.cpp  type_system.hpp
src/bloch/support/: feature_flags.hpp
src/bloch/support/error/: bloch_error.hpp
src/bloch/update/: update_manager.cpp  update_manager.hpp
src/bloch/version/: version.cpp  version.hpp
stdlib/: README.md
tests/: CMakeLists.txt  test_ast.cpp  test_framework.hpp  test_integration.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_runner.cpp  test_runtime.cpp  test_semantics.cpp  test_version.cpp
(+32 files in other folders)
