[tool.poetry]
name = "bloch-docs"
version = "0.1.0"
description = "Bloch documentation site (Sphinx + MyST)"
authors = ["Bloch Labs"]
package-mode = false
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
sphinx = "7.3.7"
myst-parser = "2.0.0"
furo = "2024.8.6"
sphinx-design = "0.6.0"
sphinx-autobuild = "2024.4.16"
linkify-it-py = {version = "2.0.2", extras = ["tlds"]}
sphinx-multiversion = "0.2.4"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
